--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     },
     "devDependencies" : {
         "babel-cli" : "6.2.0",
-        "babel-preset-es2015" : "6.1.18"
+        "babel-preset-es2015" : "6.1.18",
+        "chai": "3.4.1",
+        "mocha": "2.3.4"
     },
     "main": "index.js",
     "scripts" : {
