--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "main": "index.js",
     "scripts" : {
+        "test" : "mocha -r babel-register",
         "watch" : "babel ./src/main.js -w -o ./index.js",
         "build" : "babel ./src/main.js -o ./index.js"
     }
