--- a/package.json
+++ b/package.json
@@ -1,17 +1,38 @@
 {
     "name": "plasticine.js",
     "version": "1.0.1",
-    "description" : "plasticine.js",
+    "description" : "no description",
+    "keywords" : [
+        "plasticine",
+        "plasticine.js",
+        "object transform",
+        "json transform",
+        "json path",
+        "transform"
+    ],
+    "homepage" : "http://plasticinejs.github.io/plasticine.js/",
+    "bugs" : {
+        "url" : "https://github.com/plasticinejs/plasticine.js/issues",
+        "email" : "lamo2k123@gmail.com"
+    },
+    "license" : "MIT",
     "author" : {
         "name" : "Aleksey Novikov",
         "email" : "lamo2k123@gmail.com"
     },
+    "contributors" : [],
     "files": [
         ".babelrc",
-        "readme.md",
         "index.js",
         "src/"
     ],
+    "main": "index.js",
+    "repository" : "plasticinejs/plasticine.js",
+    "scripts" : {
+        "test" : "mocha -r babel-register",
+        "watch" : "babel ./src/main.js -w -o ./index.js",
+        "build" : "babel ./src/main.js -o ./index.js"
+    },
     "dependencies" : {
         "JSONPath" : "0.11.2"
     },
@@ -21,11 +42,5 @@
         "babel-preset-es2015" : "6.1.18",
         "chai": "3.4.1",
         "mocha": "2.3.4"
-    },
-    "main": "index.js",
-    "scripts" : {
-        "test" : "mocha -r babel-register",
-        "watch" : "babel ./src/main.js -w -o ./index.js",
-        "build" : "babel ./src/main.js -o ./index.js"
     }
 }
