--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "babel-register" : "6.5.1",
         "babel-cli" : "6.5.1",
         "babel-preset-es2015" : "6.5.0",
+        "babel-plugin-add-module-exports" : "0.1.2",
         "chai": "3.5.0",
         "mocha": "2.4.5"
     }
