--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,10 @@
         "es2015"
     ],
     "plugins": [
+        "transform-minify-booleans",
+        "transform-member-expression-literals",
+        "transform-merge-sibling-variables",
+        "transform-property-literals",
         "add-module-exports"
     ]
 }
