--- a/package.json
+++ b/package.json
@@ -1,39 +1,45 @@
 {
-    "name": "plasticine.js",
-    "version": "2.1.2",
-    "description" : "Transform javascript object",
-    "keywords" : [
-        "plasticine",
-        "plasticine.js",
-        "object transform",
-        "json transform",
-        "array transform",
-        "transform"
-    ],
-    "homepage" : "http://plasticinejs.github.io/plasticine.js/",
-    "bugs" : {
-        "url" : "https://github.com/plasticinejs/plasticine.js/issues",
-        "email" : "lamo2k123@gmail.com"
-    },
-    "license" : "MIT",
-    "author" : {
-        "name" : "Aleksey Novikov",
-        "email" : "lamo2k123@gmail.com"
-    },
-    "contributors" : [],
-    "main": "index.js",
-    "repository" : "plasticinejs/plasticine.js",
-    "scripts" : {
-        "test" : "mocha -r babel-register",
-        "watch" : "babel ./src/main.js -w -o ./index.js",
-        "build" : "babel ./src/main.js -o ./index.js"
-    },
-    "devDependencies" : {
-        "babel-register" : "6.5.1",
-        "babel-cli" : "6.5.1",
-        "babel-preset-es2015" : "6.5.0",
-        "babel-plugin-add-module-exports" : "0.1.2",
-        "chai": "3.5.0",
-        "mocha": "2.4.5"
-    }
+  "name": "plasticine.js",
+  "version": "2.2.0",
+  "description": "Transform javascript object",
+  "keywords": [
+    "plasticine",
+    "plasticine.js",
+    "object transform",
+    "json transform",
+    "array transform",
+    "transform"
+  ],
+  "homepage": "http://plasticinejs.github.io/plasticine.js/",
+  "bugs": {
+    "url": "https://github.com/plasticinejs/plasticine.js/issues",
+    "email": "lamo2k123@gmail.com"
+  },
+  "license": "MIT",
+  "author": {
+    "name": "Aleksey Novikov",
+    "email": "lamo2k123@gmail.com"
+  },
+  "contributors": [],
+  "main": "index.js",
+  "repository": "plasticinejs/plasticine.js",
+  "scripts": {
+    "test": "mocha -r babel-register",
+    "watch": "babel ./src/main.js -w -o ./index.js",
+    "build": "babel ./src/main.js -o ./index.js",
+    "uglify": "uglifyjs ./index.js -o ./index.js -c -m"
+  },
+  "devDependencies": {
+    "babel-cli": "6.6.0",
+    "babel-plugin-add-module-exports": "0.1.2",
+    "babel-plugin-transform-member-expression-literals": "6.5.0",
+    "babel-plugin-transform-merge-sibling-variables": "6.5.0",
+    "babel-plugin-transform-minify-booleans": "6.5.0",
+    "babel-plugin-transform-property-literals": "6.5.0",
+    "babel-preset-es2015": "6.6.0",
+    "babel-register": "6.6.0",
+    "chai": "3.5.0",
+    "mocha": "2.4.5",
+    "uglify-js": "2.6.2"
+  }
 }
